[gd_scene load_steps=2 format=3 uid="uid://d373lh2hft810"]

[ext_resource type="Script" uid="uid://jvlas10ohh" path="res://scenes/Components/options_menu.gd" id="1_liyum"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_liyum")

[node name="Back Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.359
anchor_top = 0.278
anchor_right = 0.641
anchor_bottom = 0.322
offset_left = 0.47998
offset_top = -0.160019
offset_right = -0.480042
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"
icon_alignment = 1

[node name="Control Settings Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.359
anchor_top = 0.417
anchor_right = 0.641
anchor_bottom = 0.461
offset_left = 0.47998
offset_top = -0.240021
offset_right = -0.480042
offset_bottom = 0.0799866
text = "Control Settings"

[node name="Video Settings Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.359
anchor_top = 0.347
anchor_right = 0.641
anchor_bottom = 0.392
offset_left = 0.47998
offset_top = 0.160004
offset_right = -0.480042
offset_bottom = -0.240021
text = "Video Settings"

[connection signal="pressed" from="Back Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control Settings Button" to="." method="_on_control_settings_button_pressed"]
[connection signal="pressed" from="Video Settings Button" to="." method="_on_video_settings_button_pressed"]
